--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@grammyjs/menu": "^1.1.2",
     "axios": "^1.2.2",
     "grammy": "^1.13.0",
     "request": "^2.88.2"
